@startuml

title __CONFIG's Class Diagram__\n

  namespace com.skhatoll.backend {
    namespace config {
      class com.skhatoll.backend.config.CorsConfig {
          + corsConfigurationSource()
      }
    }
  }
  

  namespace com.skhatoll.backend {
    namespace config {
      class com.skhatoll.backend.config.SecurityConfig {
          {static} - RUTAS_PUBLICAS : String[]
          + SecurityConfig()
          + authenticationManager()
          + authenticationProvider()
          + loginRateLimitingFilter()
          + passwordEncoder()
          + securityFilterChain()
      }
    }
  }
  

  namespace com.skhatoll.backend {
    namespace config {
      class com.skhatoll.backend.config.SpaWebConfig {
          + addViewControllers()
      }
    }
  }
  

  namespace com.skhatoll.backend {
    namespace config {
      class com.skhatoll.backend.config.WebSocketConfig {
          {static} - SALA_CODE_PATTERN : Pattern
          {static} - log : Logger
          + WebSocketConfig()
          + configureClientInboundChannel()
          + configureMessageBroker()
          + registerStompEndpoints()
      }
    }
  }
  

  com.skhatoll.backend.config.SecurityConfig o-- com.skhatoll.backend.security.JwtFilter : jwtFilter
  com.skhatoll.backend.config.SecurityConfig o-- com.skhatoll.backend.security.UserDetailsServiceImpl : userDetailsService
  com.skhatoll.backend.config.SpaWebConfig .up.|> org.springframework.web.servlet.config.annotation.WebMvcConfigurer
  com.skhatoll.backend.config.WebSocketConfig .up.|> org.springframework.web.socket.config.annotation.WebSocketMessageBrokerConfigurer
  com.skhatoll.backend.config.WebSocketConfig o-- com.skhatoll.backend.security.JwtUtil : jwtUtil
  com.skhatoll.backend.config.WebSocketConfig o-- com.skhatoll.backend.repository.SalaRepository : salaRepository
  com.skhatoll.backend.config.WebSocketConfig o-- com.skhatoll.backend.repository.SalaUsuarioRepository : salaUsuarioRepository
  com.skhatoll.backend.config.WebSocketConfig o-- com.skhatoll.backend.security.UserDetailsServiceImpl : userDetailsService
  com.skhatoll.backend.config.WebSocketConfig o-- com.skhatoll.backend.repository.UsuarioRepository : usuarioRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
